--- a/styles/main-subpage.css
+++ b/styles/main-subpage.css
@@ -1,17 +1,21 @@
-
-main {
-    /* margin-top: 7rem; */
-
-    width: 100%;
-    min-height: 100%;
-    /* min-height: calc(100% - 7rem); */
-    
-    position: relative;
-}
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
 
 body.subpage main {
+    width: 100%;
+    min-height: 100%;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     padding: calc(50vh + 3.5rem) 3rem 4rem;
     overflow-y: hidden;
 }
@@ -28,15 +32,16 @@ body.subpage main picture {
     right: 0;
     /* margin-bottom: -50rem; */
     overflow: hidden;
-    z-index: 0;    
-
+    z-index: 0;
 }
 
 body.subpage main picture > * {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    object-position: center top;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center top;
+       object-position: center top;
 }
 
 
@@ -48,9 +53,9 @@ body.subpage main::before {
     bottom: 0;
     left: 0;
     right: 0;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.9) 50vh, rgba(255, 255, 255, 0.9));
-
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.9) 50vh, rgba(255, 255, 255, 0.9));
+    background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(rgba(60, 60, 60, 0.9)), to(rgba(60, 60, 60, 0.9)));
+    background: -o-linear-gradient(top, transparent, rgba(60, 60, 60, 0.9) calc(75vh + 3.5rem), rgba(60, 60, 60, 0.9));
+    background: linear-gradient(to bottom, transparent, rgba(60, 60, 60, 0.9) calc(75vh + 3.5rem), rgba(60, 60, 60, 0.9));
     z-index: 1; /* picture un önünde olsun diye */
 }
 
@@ -74,8 +79,14 @@ body.subpage main h1 {
 
 body.subpage main h1 span {
     display: block;
-    transform: none;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
+    -webkit-transition: -webkit-transform 1s ease;
+    transition: -webkit-transform 1s ease;
+    -o-transition: transform 1s ease;
     transition: transform 1s ease;
+    transition: transform 1s ease, -webkit-transform 1s ease;
 }
 
 body.subpage main h1::after {
@@ -86,7 +97,11 @@ body.subpage main h1::after {
     left: 0;
     width: 100%;
     height: .1rem;
-    background: linear-gradient(to right, rgb(100, 100, 100), rgb(200, 200, 200)); 
+    background: -webkit-gradient(linear, left top, right top, from(rgb(255, 255, 255)), to(rgb(200, 200, 200)));
+    background: -o-linear-gradient(left, rgb(255, 255, 255), rgb(200, 200, 200));
+    background: linear-gradient(to right, rgb(255, 255, 255), rgb(200, 200, 200));
+    -webkit-transition: width 1.5s ease;
+    -o-transition: width 1.5s ease;
     transition: width 1.5s ease; /*sayfa yüklemesinde alt çizgi uzasın diye*/
 }
 body.subpage main p {    
@@ -99,17 +114,28 @@ body.subpage main p {
 body.subpage main p {
     /* margin: 1rem 3rem;         */
     margin: 1rem 0;
-    transition: transform 1s ease; /*sayfa yüklemesindeki animasyon için */
-    transform: none;
+    -webkit-transition: -webkit-transform 1s ease;
+    transition: -webkit-transform 1s ease;
+    -o-transition: transform 1s ease;
+    transition: transform 1s ease;
+    transition: transform 1s ease, -webkit-transform 1s ease; /*sayfa yüklemesindeki animasyon için */
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
 }
-
 
 
 body.subpage main form {
     z-index: 2;
     margin-top: 2rem;
-    transform: none;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
+    -webkit-transition: -webkit-transform 1s ease;
+    transition: -webkit-transform 1s ease;
+    -o-transition: transform 1s ease;
     transition: transform 1s ease;
+    transition: transform 1s ease, -webkit-transform 1s ease;
 }
 body.subpage main form input,
 body.subpage main form textarea {
@@ -118,8 +144,13 @@ body.subpage main form textarea {
     font-size: 2rem;
     border-radius: .2rem;
     border: 0;
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    -webkit-transition: -webkit-box-shadow .2s ease;
+    transition: -webkit-box-shadow .2s ease;
+    -o-transition: box-shadow .2s ease;
     transition: box-shadow .2s ease;
+    transition: box-shadow .2s ease, -webkit-box-shadow .2s ease;
     font-family: Montserrat, 'Lucida Sans', 'Lucida Sans Unicode', Arial, sans-serif;
     letter-spacing: .08rem;
 }
@@ -136,7 +167,8 @@ body.subpage main form textarea {
 }
 body.subpage main form input:focus,
 body.subpage main form textarea:focus {
-    box-shadow: 0 0 0 .4rem rgb(200, 200, 200);
+    -webkit-box-shadow: 0 0 0 .4rem rgb(200, 200, 200);
+            box-shadow: 0 0 0 .4rem rgb(200, 200, 200);
     outline: none;
 }
 body.subpage main form button {
@@ -151,39 +183,46 @@ body.subpage main form button {
     cursor: pointer;
     background-color: rgb(100, 100, 100);
     color: white;
+    -webkit-transition: background-color .2s ease;
+    -o-transition: background-color .2s ease;
     transition: background-color .2s ease;
 }
-body.subpage main form button:hover {
+body.subpage main form button:active {
     background-color: rgb(150, 150, 150);
 }
-
-
+@media (pointer: fine) {
+    body.subpage main form button:hover {
+        background-color: rgb(150, 150, 150);
+    }
+}
 
 
 body.subpage.fade main h1::after { /* sayfa yüklemesi animasyonu*/
     width: 0;
 } 
 body.subpage.fade main h1 span {
-    transform: translateY(-4rem);
+    -webkit-transform: translateY(-4rem);
+        -ms-transform: translateY(-4rem);
+            transform: translateY(-4rem);
 }
 body.subpage.fade main p { /*sayfa yüklemesi animasyonu */
-    transform: translateY(4rem);
+    -webkit-transform: translateY(4rem);
+        -ms-transform: translateY(4rem);
+            transform: translateY(4rem);
 }
 body.subpage.fade main form {
-    transform: translateY(4rem);
+    -webkit-transform: translateY(4rem);
+        -ms-transform: translateY(4rem);
+            transform: translateY(4rem);
 }
 body.subpage main footer {
     /* margin: auto 3rem 0 3rem; */
     padding-top: 4rem;
     z-index: 2; /* picture ve main::before un önünde olsun diye */
-    text-shadow: 0 0 0.08rem grey; /* transparan arka planın önünden okunsun diye */
-    
+    text-shadow: 0 0 0.08rem grey; /* transparan arka planın önünden okunsun diye */    
     margin-top: auto;
     position: relative;
 }
-
-
-
 
 
 body main span.copy {
@@ -203,18 +242,35 @@ body.subpage main img.showroom {
     background-color: white;
     padding: .5rem;
     
-    transform: none;
+    -webkit-transform: none;
+    
+        -ms-transform: none;
+    
+            transform: none;
+    -webkit-transition: -webkit-transform 1s ease, -webkit-box-shadow .3s ease;
+    transition: -webkit-transform 1s ease, -webkit-box-shadow .3s ease;
+    -o-transition: transform 1s ease, box-shadow .3s ease;
     transition: transform 1s ease, box-shadow .3s ease;
+    transition: transform 1s ease, box-shadow .3s ease, -webkit-transform 1s ease, -webkit-box-shadow .3s ease;
     /* box-shadow: 0 0 .5rem .5rem gray; */
 }
 body.subpage main img.showroom:first-of-type {
     margin-top: 5rem;
 }
-body.subpage main img.showroom:hover {
-    box-shadow: 0 0 1.5rem white;
+body.subpage main img.showroom:active {
+    -webkit-box-shadow: 0 0 1.5rem white;
+            box-shadow: 0 0 1.5rem white;
+}
+@media (pointer: fine) {
+    body.subpage main img.showroom:hover {
+        -webkit-box-shadow: 0 0 1.5rem white;
+                box-shadow: 0 0 1.5rem white;
+    }
 }
 
 
 body.subpage.fade main img.showroom {
-    transform: translateY(4rem);
+    -webkit-transform: translateY(4rem);
+        -ms-transform: translateY(4rem);
+            transform: translateY(4rem);
 }
