--- a/styles/top-bar.css
+++ b/styles/top-bar.css
@@ -1,3 +1,9 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
 
 body #top-bar {
     position: fixed;
@@ -6,38 +12,35 @@ body #top-bar {
     height: 7rem;
     background-color: white;
     border-bottom: .1rem solid gray;
-    box-shadow: 0 0 .3rem gray;
+    -webkit-box-shadow: 0 0 .3rem gray;
+            box-shadow: 0 0 .3rem gray;
     z-index: 7;
     cursor: pointer;
 }
 
-body #top-bar::before {
-    content: "";
-    background-color: transparent;   
-    opacity: .5;
-}
-body.menu-open #top-bar::before {
-    content: "";
-    position: fixed;
-    inset: 0;
-    background-color: black; 
-    transition: background-color .3s ease;
-    z-index: 2;
-} 
 
 body #top-bar::after {
     content: "";
     z-index: 1;
+    background-color: transparent;
 }
 body.menu-open #top-bar::after {
     content: "";
     position: fixed;
-    inset: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
     -webkit-backdrop-filter: blur(3px);
-    backdrop-filter: blur(3px); 
-    transition: -webkit-backdrop-filter .3s ease;
-    transition: backdrop-filter .3s ease;
+            backdrop-filter: blur(3px); 
+    -webkit-transition: background-color .3s ease, -webkit-backdrop-filter .3s ease; 
+    transition: background-color .3s ease, -webkit-backdrop-filter .3s ease; 
+    -o-transition: backdrop-filter .3s ease, background-color .3s ease; 
+    transition: backdrop-filter .3s ease, background-color .3s ease; 
+    transition: backdrop-filter .3s ease, background-color .3s ease, -webkit-backdrop-filter .3s ease; 
 } 
+
 
 body #top-bar span {
     display: block;
@@ -47,7 +50,11 @@ body #top-bar span {
     position: absolute;
     top: 50%;
     right: 3rem;
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+    -webkit-transition: all .3s ease;
+    -o-transition: all .3s ease;
     transition: all .3s ease;
 }
 body #top-bar span::before {
@@ -59,7 +66,11 @@ body #top-bar span::before {
     left: 0;
     right: 0;
     background-color: rgb(60, 60, 60);
-    transform: translateY(-1rem);
+    -webkit-transform: translateY(-1rem);
+        -ms-transform: translateY(-1rem);
+            transform: translateY(-1rem);
+    -webkit-transition: all .3s ease;
+    -o-transition: all .3s ease;
     transition: all .3s ease;
 }
 body #top-bar span::after {
@@ -71,26 +82,36 @@ body #top-bar span::after {
     left: 0;
     right: 0;
     background-color: rgb(60, 60, 60);
-    transform: translateY(1rem);
+    -webkit-transform: translateY(1rem);
+        -ms-transform: translateY(1rem);
+            transform: translateY(1rem);
+    -webkit-transition: all .3s ease;
+    -o-transition: all .3s ease;
     transition: all .3s ease;
 }
 body #top-bar:hover span,
 body #top-bar:hover span::before,
 body #top-bar:hover span::after {
-    box-shadow: 0 0 .4rem grey;
+    -webkit-box-shadow: 0 0 .4rem grey;
+            box-shadow: 0 0 .4rem grey;
 }
 
 
 body.menu-open #top-bar span {
     background-color: transparent;
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     z-index: 3; /*deneme*/
 }
 body.menu-open #top-bar span::before {
     background-color: white;
-    transform: translate(0) rotate(45deg);
+    -webkit-transform: translate(0) rotate(45deg);
+        -ms-transform: translate(0) rotate(45deg);
+            transform: translate(0) rotate(45deg);
 }
 body.menu-open #top-bar span::after {
     background-color: white;
-    transform: translate(0) rotate(-45deg);
+    -webkit-transform: translate(0) rotate(-45deg);
+        -ms-transform: translate(0) rotate(-45deg);
+            transform: translate(0) rotate(-45deg);
 }
