--- a/styles/main-subpage.css
+++ b/styles/main-subpage.css
@@ -20,29 +20,48 @@ body.subpage main {
     overflow-y: hidden;
 }
 
-body.subpage main picture {    
+body.subpage main::after {    
+    content: "";
     display: block;
     position: fixed;
-    width: 100%;
+    /* width: 100%; */
     /* flex: 0 0 100%; */
     /* max-height: 100%; */
     top: 7rem; /*top bar yüksekliği */
+    top: 0;
+    bottom: -10rem; /* mobil cihazlardaki kaydırmaya önlem */
     bottom: 0;
+    /* left: 0;
+    right: 0; */
     left: 0;
-    right: 0;
-    /* margin-bottom: -50rem; */
-    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    /* overflow: hidden; */
     z-index: 0;
+    background-size: cover;
+    background-position: center top;
+}
+body.subpage main.about::after {
+    background-image: url(../images/about-es.png);
+}
+body.subpage main.contact::after {
+    background-image: url(../images/contact.jpg);
+}
+body.subpage main.furniture::after {
+    background-image: url(../images/furniture.jpg);
+}
+body.subpage main.industrial-design::after {
+    background-image: url(../images/industrial-design.jpg);
 }
 
-body.subpage main picture > * {
+/* body.subpage main picture > * {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
     -o-object-position: center top;
        object-position: center top;
-}
+} */
 
 
 body.subpage main::before {
