--- a/styles/header.css
+++ b/styles/header.css
@@ -7,10 +7,11 @@
 
 body header {
     position: fixed;
-    width: 32rem;
     width: -webkit-fit-content;
     width: -moz-fit-content;
-    width: fit-content;
+    width: max-content;
+    width: 32rem;
+    max-width: 80%;
     top: 0;
     bottom: 0;
     left: 0;
