--- a/styles/main-homepage.css
+++ b/styles/main-homepage.css
@@ -12,8 +12,8 @@ body.homepage main {
     overflow: hidden;
 }
 
-body.homepage main::after {
-    content: " \00a9  2022";
+
+body.homepage #home-copy {
     font-size: 1.3rem;
     letter-spacing: .1rem;
     position: absolute;
@@ -21,19 +21,31 @@ body.homepage main::after {
     right: 2.8rem;
     z-index: 1;
     color: white;
-    text-shadow: 0 0 2rem black;
+    /* text-shadow: 0 0 3rem black; */
+    text-shadow: 5px 5px 10px black;
+}
+body.homepage #home-copy #home-copy-large {
+    display: none;
 }
 
-#content-logo {
+
+body.homepage #content-logo {
     position: absolute;
     bottom: 2rem;
     left: 2rem;
     z-index: 1;
     color: white;
-    text-shadow: 0 0 2rem black;
+    /* text-shadow: 0 0 2rem black; */
+    text-shadow: 5px 5px 10px black;
 }
 
-.image-div {
+body.homepage #hero-header {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+body.homepage #hero-header .image-div {
     width: 100%;
     height: 130%;
     position: absolute;
@@ -49,17 +61,17 @@ body.homepage main::after {
     
     -webkit-animation-name: slide;    
             animation-name: slide;
-    -webkit-animation-duration: 8s;
-            animation-duration: 8s;
+    -webkit-animation-duration: 10s;
+            animation-duration: 10s;
     -webkit-animation-iteration-count: infinite;
             animation-iteration-count: infinite;
     -webkit-animation-timing-function: linear;
             animation-timing-function: linear;
 
     opacity: 0;
-    -webkit-transition: opacity 1s ease;
-    -o-transition: opacity 1s ease;
-    transition: opacity 1s ease;
+    -webkit-transition: opacity 2s ease;
+    -o-transition: opacity 2s ease;
+    transition: opacity 2s ease;
 }
 @-webkit-keyframes slide {
     0% {bottom: 0;}
@@ -68,4 +80,65 @@ body.homepage main::after {
 @keyframes slide {
     0% {bottom: 0;}
     100% {bottom: -30%;}
+}
+
+body.homepage #hero-header #hero-link {
+    position: absolute;
+    top: 9.8rem;
+    right: 2.8rem;
+    text-align: right;
+}
+body.homepage #hero-header #hero-link a {
+    display: block;
+    text-transform: uppercase;
+    /* font-weight: 400; */
+    font-size: 3.2rem;
+    line-height: 3.2rem;
+    color: white;
+    text-shadow: 5px 5px 10px black;
+    opacity: 1;
+    -webkit-transition: opacity 1s ease;
+    -o-transition: opacity 1s ease;
+    transition: opacity 1s ease;
+}
+body.homepage #hero-header #hero-link a span {
+    display: block;
+    -webkit-transition: -webkit-transform 1s ease;
+    transition: -webkit-transform 1s ease;
+    -o-transition: transform 1s ease;
+    transition: transform 1s ease;
+    transition: transform 1s ease, -webkit-transform 1s ease;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
+}
+body.homepage #hero-header #hero-link a span:first-child {
+    font-weight: 600;
+}
+body.homepage #hero-header #hero-link a span:nth-child(2) {
+    float: right;
+    width: 100%;
+    height: 0.1rem;
+    background: -webkit-gradient(linear, right top, left top, from(rgb(255, 255, 255)), to(rgb(200, 200, 200)));
+    background: -o-linear-gradient(right, rgb(255, 255, 255), rgb(200, 200, 200));
+    background: linear-gradient(to left, rgb(255, 255, 255), rgb(200, 200, 200));
+    -webkit-transition: width 1.5s ease;
+    -o-transition: width 1.5s ease;
+    transition: width 1.5s ease;
+}
+body.homepage #hero-header #hero-link.fade a {
+    opacity: 0;
+}
+body.homepage #hero-header #hero-link.fade a span:first-child {
+    -webkit-transform: translateY(-4rem);
+        -ms-transform: translateY(-4rem);
+            transform: translateY(-4rem);
+}
+body.homepage #hero-header #hero-link.fade a span:nth-child(2) {
+    width: 0;
+}
+body.homepage #hero-header #hero-link.fade a span:last-child {
+    -webkit-transform: translateY(4rem);
+        -ms-transform: translateY(4rem);
+            transform: translateY(4rem);
 }
