--- a/styles/main-subpage.css
+++ b/styles/main-subpage.css
@@ -16,6 +16,7 @@ body.subpage main {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    padding: 50% 3rem 4rem;
     padding: calc(50vh + 3.5rem) 3rem 4rem;
     overflow-y: hidden;
 }
@@ -24,9 +25,6 @@ body.subpage main::after {
     content: "";
     display: block;
     position: fixed;
-    /* width: 100%; */
-    /* flex: 0 0 100%; */
-    /* max-height: 100%; */
     top: 7rem; /*top bar yüksekliği */
     top: 0;
     bottom: -10rem; /* mobil cihazlardaki kaydırmaya önlem */
@@ -70,36 +68,31 @@ body.subpage main::before {
     z-index: 1; /* picture un önünde olsun diye */
 }
 
-body.subpage h1 {
+
+body.subpage main h1 {
+    position: relative;
     font-size: 2.5rem;
     font-size: 4rem;
     line-height: 4rem;
-    vertical-align: middle;    
-    /* border-bottom: 1px solid gray; */
+    vertical-align: middle;   
     letter-spacing: .2rem;
     font-weight: 800;
-    position: relative;
     z-index: 2; /* picture ve main::before un önünde olsun diye */
-}
-body.subpage main h1 {
-   /* margin-top: 4rem; /* vh desteklenmiyorken 
-    margin: calc(50vh - 3.5rem) 3rem 1rem 3rem; */
     margin-bottom: 1rem;
     text-shadow: 0 0 0.08rem grey; /* transparan arka planın önünden okunsun diye */
 }
-
 body.subpage main h1 span {
     display: block;
+    font-weight: 800;
     -webkit-transform: none;
         -ms-transform: none;
             transform: none;
     -webkit-transition: -webkit-transform 1s ease;
-    transition: -webkit-transform 1s ease;
-    -o-transition: transform 1s ease;
-    transition: transform 1s ease;
-    transition: transform 1s ease, -webkit-transform 1s ease;
+            transition: -webkit-transform 1s ease;
+         -o-transition: transform 1s ease;
+            transition: transform 1s ease;
+            transition: transform 1s ease, -webkit-transform 1s ease;
 }
-
 body.subpage main h1::after {
     content: "";
     display: block;
@@ -112,18 +105,17 @@ body.subpage main h1::after {
     background: -o-linear-gradient(left, rgb(255, 255, 255), rgb(200, 200, 200));
     background: linear-gradient(to right, rgb(255, 255, 255), rgb(200, 200, 200));
     -webkit-transition: width 1.5s ease;
-    -o-transition: width 1.5s ease;
-    transition: width 1.5s ease; /*sayfa yüklemesinde alt çizgi uzasın diye*/
+         -o-transition: width 1.5s ease;
+            transition: width 1.5s ease; /*sayfa yüklemesinde alt çizgi uzasın diye*/
 }
+
+
 body.subpage main p {    
     letter-spacing: .05rem;
     line-height: 160%;
     position: relative;
     z-index: 2; /* picture ve main::before un önünde olsun diye */
     text-shadow: 0 0 0.08rem grey; /* transparan arka planın önünden okunsun diye */
-}
-body.subpage main p {
-    /* margin: 1rem 3rem;         */
     margin: 1rem 0;
     -webkit-transition: -webkit-transform 1s ease;
     transition: -webkit-transform 1s ease;
