--- a/styles/main-homepage.css
+++ b/styles/main-homepage.css
@@ -13,22 +13,6 @@ body.homepage main {
 }
 
 
-body.homepage #home-copy {
-    font-size: 1.3rem;
-    letter-spacing: .1rem;
-    position: absolute;
-    bottom: 2.8rem;
-    right: 2.8rem;
-    z-index: 1;
-    color: white;
-    /* text-shadow: 0 0 3rem black; */
-    text-shadow: 5px 5px 10px black;
-}
-body.homepage #home-copy #home-copy-large {
-    display: none;
-}
-
-
 body.homepage #content-logo {
     position: absolute;
     bottom: 2rem;
@@ -57,8 +41,26 @@ body.homepage #hero-header .image-div {
     background-position: center;
     background-size: cover;
     background-color: gray;
-    background-image: url("../images/background-image.jpeg"); 
     
+
+    opacity: 0;
+    -webkit-transition: opacity 2s ease;
+         -o-transition: opacity 2s ease;
+            transition: opacity 2s ease;
+}
+body.homepage #hero-header .image-div:nth-child(1) {
+    background-image: url("../images/background-image.jpeg"); 
+}
+body.homepage #hero-header .image-div:nth-child(2) {
+    background-image: url("../images/furniture/furniture-11.jpeg"); 
+}
+body.homepage #hero-header .image-div:nth-child(3) {
+    background-image: url("../images/industrial-design/design-1.jpeg"); 
+}
+body.homepage #hero-header .image-div:nth-child(4) {
+    background-image: url("../images/furniture/furniture-7.jpeg"); 
+}
+body.homepage #hero-header .image-div.active {
     -webkit-animation-name: slide;    
             animation-name: slide;
     -webkit-animation-duration: 10s;
@@ -67,11 +69,12 @@ body.homepage #hero-header .image-div {
             animation-iteration-count: infinite;
     -webkit-animation-timing-function: linear;
             animation-timing-function: linear;
-
-    opacity: 0;
-    -webkit-transition: opacity 2s ease;
-    -o-transition: opacity 2s ease;
-    transition: opacity 2s ease;
+    
+    opacity: 1;
+    z-index: 2;
+}
+body.homepage #hero-header .image-div.active.ending {
+    z-index: 1;
 }
 @-webkit-keyframes slide {
     0% {bottom: 0;}
@@ -87,6 +90,7 @@ body.homepage #hero-header #hero-link {
     top: 9.8rem;
     right: 2.8rem;
     text-align: right;
+    z-index: 3;
 }
 body.homepage #hero-header #hero-link a {
     display: block;
@@ -119,8 +123,8 @@ body.homepage #hero-header #hero-link a span:nth-child(2) {
     float: right;
     width: 100%;
     height: 0.1rem;
-    background: -webkit-gradient(linear, right top, left top, from(rgb(255, 255, 255)), to(rgb(200, 200, 200)));
     background: -o-linear-gradient(right, rgb(255, 255, 255), rgb(200, 200, 200));
+    background: -webkit-gradient(linear, right top, left top, from(rgb(255, 255, 255)), to(rgb(200, 200, 200)));
     background: linear-gradient(to left, rgb(255, 255, 255), rgb(200, 200, 200));
     -webkit-transition: width 1.5s ease;
     -o-transition: width 1.5s ease;
@@ -141,4 +145,20 @@ body.homepage #hero-header #hero-link.fade a span:last-child {
     -webkit-transform: translateY(4rem);
         -ms-transform: translateY(4rem);
             transform: translateY(4rem);
+}
+
+
+body.homepage #home-copy {
+    font-size: 1.3rem;
+    letter-spacing: .1rem;
+    position: absolute;
+    bottom: 2.8rem;
+    right: 2.8rem;
+    z-index: 3;
+    color: white;
+    /* text-shadow: 0 0 3rem black; */
+    text-shadow: 5px 5px 10px black;
+}
+body.homepage #home-copy #home-copy-large {
+    display: none;
 }
