--- a/styles/main-homepage.css
+++ b/styles/main-homepage.css
@@ -27,6 +27,7 @@ body.homepage #hero-header {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 0;
 }
 
 body.homepage #hero-header .image-div {
@@ -74,6 +75,7 @@ body.homepage #hero-header .image-div.active {
     z-index: 2;
 }
 body.homepage #hero-header .image-div.active.ending {
+    opacity: 0;
     z-index: 1;
 }
 @-webkit-keyframes slide {
