--- a/styles/main-homepage.css
+++ b/styles/main-homepage.css
@@ -28,6 +28,7 @@ body.homepage #hero-header {
     width: 100%;
     height: 100%;
     z-index: 0;
+    background-color: rgb(60, 60, 60);
 }
 
 body.homepage #hero-header .image-div {
@@ -40,9 +41,7 @@ body.homepage #hero-header .image-div {
     z-index: 0;
     
     background-position: center;
-    background-size: cover;
-    background-color: gray;
-    
+    background-size: cover;    
 
     opacity: 0;
     -webkit-transition: opacity 2s ease;
