--- a/styles/header.css
+++ b/styles/header.css
@@ -10,11 +10,12 @@ body header {
     /* width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content; */ 
+    top: 0;
+    left: 0;
     width: 32rem; 
     max-width: 80%;
-    top: 0;
-    bottom: 0;
-    left: 0;
+    height: 100%;
+    height: 100vh;
     background-color: white;
     z-index: 10;
     overflow: auto;
