--- a/styles/main-homepage.css
+++ b/styles/main-homepage.css
@@ -86,14 +86,14 @@ body.homepage #hero-header .image-div.active.ending {
     100% {bottom: -30%;}
 }
 
-body.homepage #hero-header #hero-link {
+body.homepage #hero-link {
     position: absolute;
     top: 9.8rem;
     right: 2.8rem;
     text-align: right;
     z-index: 3;
 }
-body.homepage #hero-header #hero-link a {
+body.homepage #hero-link a {
     display: block;
     text-transform: uppercase;
     /* font-weight: 400; */
@@ -106,7 +106,7 @@ body.homepage #hero-header #hero-link a {
     -o-transition: opacity 1s ease;
     transition: opacity 1s ease;
 }
-body.homepage #hero-header #hero-link a span {
+body.homepage #hero-link a span {
     display: block;
     -webkit-transition: -webkit-transform 1s ease;
     transition: -webkit-transform 1s ease;
@@ -117,10 +117,10 @@ body.homepage #hero-header #hero-link a span {
         -ms-transform: none;
             transform: none;
 }
-body.homepage #hero-header #hero-link a span:first-child {
+body.homepage #hero-link a span:first-child {
     font-weight: 600;
 }
-body.homepage #hero-header #hero-link a span:nth-child(2) {
+body.homepage #hero-link a span:nth-child(2) {
     float: right;
     width: 100%;
     height: 0.1rem;
@@ -131,18 +131,18 @@ body.homepage #hero-header #hero-link a span:nth-child(2) {
     -o-transition: width 1.5s ease;
     transition: width 1.5s ease;
 }
-body.homepage #hero-header #hero-link.fade a {
+body.homepage #hero-link.fade a {
     opacity: 0;
 }
-body.homepage #hero-header #hero-link.fade a span:first-child {
+body.homepage #hero-link.fade a span:first-child {
     -webkit-transform: translateY(-4rem);
         -ms-transform: translateY(-4rem);
             transform: translateY(-4rem);
 }
-body.homepage #hero-header #hero-link.fade a span:nth-child(2) {
+body.homepage #hero-link.fade a span:nth-child(2) {
     width: 0;
 }
-body.homepage #hero-header #hero-link.fade a span:last-child {
+body.homepage #hero-link.fade a span:last-child {
     -webkit-transform: translateY(4rem);
         -ms-transform: translateY(4rem);
             transform: translateY(4rem);
