--- a/styles/main-homepage.css
+++ b/styles/main-homepage.css
@@ -13,7 +13,7 @@ body.homepage main {
 }
 
 
-body.homepage #content-logo {
+body.homepage main #content-logo {
     position: absolute;
     bottom: 2rem;
     left: 2rem;
@@ -23,7 +23,7 @@ body.homepage #content-logo {
     text-shadow: 5px 5px 10px black;
 }
 
-body.homepage #hero-header {
+body.homepage main #hero-header {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -31,7 +31,7 @@ body.homepage #hero-header {
     background-color: rgb(60, 60, 60);
 }
 
-body.homepage #hero-header .image-div {
+body.homepage main #hero-header .image-div {
     width: 100%;
     height: 130%;
     position: absolute;
@@ -48,19 +48,19 @@ body.homepage #hero-header .image-div {
          -o-transition: opacity 2s ease;
             transition: opacity 2s ease;
 }
-body.homepage #hero-header .image-div:nth-child(1) {
+body.homepage main #hero-header .image-div:nth-child(1) {
     background-image: url("../images/background-image.jpeg"); 
 }
-body.homepage #hero-header .image-div:nth-child(2) {
+body.homepage main #hero-header .image-div:nth-child(2) {
     background-image: url("../images/furniture/furniture-11.jpeg"); 
 }
-body.homepage #hero-header .image-div:nth-child(3) {
+body.homepage main #hero-header .image-div:nth-child(3) {
     background-image: url("../images/industrial-design/design-1.jpeg"); 
 }
-body.homepage #hero-header .image-div:nth-child(4) {
+body.homepage main #hero-header .image-div:nth-child(4) {
     background-image: url("../images/furniture/furniture-7.jpeg"); 
 }
-body.homepage #hero-header .image-div.active {
+body.homepage main #hero-header .image-div.active {
     -webkit-animation-name: slide;    
             animation-name: slide;
     -webkit-animation-duration: 10s;
@@ -73,7 +73,7 @@ body.homepage #hero-header .image-div.active {
     opacity: 1;
     z-index: 2;
 }
-body.homepage #hero-header .image-div.active.ending {
+body.homepage main #hero-header .image-div.active.ending {
     opacity: 0;
     z-index: 1;
 }
@@ -86,14 +86,14 @@ body.homepage #hero-header .image-div.active.ending {
     100% {bottom: -30%;}
 }
 
-body.homepage #hero-link {
+body.homepage main #hero-link {
     position: absolute;
     top: 9.8rem;
     right: 2.8rem;
     text-align: right;
     z-index: 3;
 }
-body.homepage #hero-link a {
+body.homepage main #hero-link a {
     display: block;
     text-transform: uppercase;
     /* font-weight: 400; */
@@ -106,7 +106,7 @@ body.homepage #hero-link a {
     -o-transition: opacity 1s ease;
     transition: opacity 1s ease;
 }
-body.homepage #hero-link a span {
+body.homepage main #hero-link a span {
     display: block;
     -webkit-transition: -webkit-transform 1s ease;
     transition: -webkit-transform 1s ease;
@@ -117,10 +117,10 @@ body.homepage #hero-link a span {
         -ms-transform: none;
             transform: none;
 }
-body.homepage #hero-link a span:first-child {
+body.homepage main #hero-link a span:first-child {
     font-weight: 600;
 }
-body.homepage #hero-link a span:nth-child(2) {
+body.homepage main #hero-link a span:nth-child(2) {
     float: right;
     width: 100%;
     height: 0.1rem;
@@ -131,25 +131,25 @@ body.homepage #hero-link a span:nth-child(2) {
     -o-transition: width 1.5s ease;
     transition: width 1.5s ease;
 }
-body.homepage #hero-link.fade a {
+body.homepage main #hero-link.fade a {
     opacity: 0;
 }
-body.homepage #hero-link.fade a span:first-child {
+body.homepage main #hero-link.fade a span:first-child {
     -webkit-transform: translateY(-4rem);
         -ms-transform: translateY(-4rem);
             transform: translateY(-4rem);
 }
-body.homepage #hero-link.fade a span:nth-child(2) {
+body.homepage main #hero-link.fade a span:nth-child(2) {
     width: 0;
 }
-body.homepage #hero-link.fade a span:last-child {
+body.homepage main #hero-link.fade a span:last-child {
     -webkit-transform: translateY(4rem);
         -ms-transform: translateY(4rem);
             transform: translateY(4rem);
 }
 
 
-body.homepage #home-copy {
+body.homepage main footer {
     font-size: 1.3rem;
     letter-spacing: .1rem;
     position: absolute;
@@ -160,6 +160,6 @@ body.homepage #home-copy {
     /* text-shadow: 0 0 3rem black; */
     text-shadow: 5px 5px 10px black;
 }
-body.homepage #home-copy #home-copy-large {
+body.homepage main footer #home-copy-large {
     display: none;
 }
