--- a/styles/main-subpage.css
+++ b/styles/main-subpage.css
@@ -62,8 +62,8 @@ body.subpage main::before {
     bottom: 0;
     left: 0;
     right: 0;
-    background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(rgba(60, 60, 60, 0.9)), to(rgba(60, 60, 60, 0.9)));
     background: -o-linear-gradient(top, transparent, rgba(60, 60, 60, 0.9) calc(75vh + 3.5rem), rgba(60, 60, 60, 0.9));
+    background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(rgba(60, 60, 60, 0.9)), to(rgba(60, 60, 60, 0.9)));
     background: linear-gradient(to bottom, transparent, rgba(60, 60, 60, 0.9) calc(75vh + 3.5rem), rgba(60, 60, 60, 0.9));
     z-index: 1; /* picture un önünde olsun diye */
 }
@@ -101,8 +101,8 @@ body.subpage main h1::after {
     left: 0;
     width: 100%;
     height: .1rem;
-    background: -webkit-gradient(linear, left top, right top, from(rgb(255, 255, 255)), to(rgb(200, 200, 200)));
     background: -o-linear-gradient(left, rgb(255, 255, 255), rgb(200, 200, 200));
+    background: -webkit-gradient(linear, left top, right top, from(rgb(255, 255, 255)), to(rgb(200, 200, 200)));
     background: linear-gradient(to right, rgb(255, 255, 255), rgb(200, 200, 200));
     -webkit-transition: width 1.5s ease;
          -o-transition: width 1.5s ease;
@@ -131,6 +131,7 @@ body.subpage main p {
 body.subpage main form {
     z-index: 2;
     margin-top: 2rem;
+    margin-bottom: 2rem;
     -webkit-transform: none;
         -ms-transform: none;
             transform: none;
@@ -174,6 +175,11 @@ body.subpage main form textarea:focus {
             box-shadow: 0 0 0 .4rem rgb(200, 200, 200);
     outline: none;
 }
+body.subpage main form > input.empty,
+body.subpage main form > textarea.empty {
+    -webkit-box-shadow: 0 0 0 .4rem rgb(252, 0, 0);
+            box-shadow: 0 0 0 .4rem rgb(252, 0, 0);
+}
 body.subpage main form button {
     height: 4rem;
     width: 20rem;
@@ -198,6 +204,22 @@ body.subpage main form button:active {
         background-color: rgb(150, 150, 150);
     }
 }
+body.subpage main address {
+    margin: 1rem 0;
+    z-index: 3;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
+    -webkit-transition: -webkit-transform 1s ease;
+    transition: -webkit-transform 1s ease;
+    -o-transition: transform 1s ease;
+    transition: transform 1s ease;
+    transition: transform 1s ease, -webkit-transform 1s ease;
+    line-height: 150%;
+}
+body.subpage main address a {
+    color: white;
+}
 
 
 body.subpage.fade main h1::after { /* sayfa yüklemesi animasyonu*/
@@ -208,16 +230,17 @@ body.subpage.fade main h1 span {
         -ms-transform: translateY(-4rem);
             transform: translateY(-4rem);
 }
-body.subpage.fade main p { /*sayfa yüklemesi animasyonu */
+body.subpage.fade main p,
+body.subpage.fade main img.showroom,
+body.subpage.fade main form,
+body.subpage.fade main address,
+body.subpage.fade main footer { /*sayfa yüklemesi animasyonu */
     -webkit-transform: translateY(4rem);
         -ms-transform: translateY(4rem);
             transform: translateY(4rem);
 }
-body.subpage.fade main form {
-    -webkit-transform: translateY(4rem);
-        -ms-transform: translateY(4rem);
-            transform: translateY(4rem);
-}
+
+
 body.subpage main footer {
     /* margin: auto 3rem 0 3rem; */
     padding-top: 4rem;
@@ -225,6 +248,14 @@ body.subpage main footer {
     text-shadow: 0 0 0.08rem grey; /* transparan arka planın önünden okunsun diye */    
     margin-top: auto;
     position: relative;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
+    -webkit-transition: -webkit-transform 1s ease;
+    transition: -webkit-transform 1s ease;
+    -o-transition: transform 1s ease;
+    transition: transform 1s ease;
+    transition: transform 1s ease, -webkit-transform 1s ease;
 }
 
 
@@ -271,9 +302,3 @@ body.subpage main img.showroom:active {
     }
 }
 
-
-body.subpage.fade main img.showroom {
-    -webkit-transform: translateY(4rem);
-        -ms-transform: translateY(4rem);
-            transform: translateY(4rem);
-}
